--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ language: go
 go:
 - "1.11.x"
 
+env:
+- GO111MODULE=on
+
 before_install:
-- go get github.com/stretchr/testify
+#- go get github.com/stretchr/testify
 #- if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 
 script:
-  make;
+  make test;
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
